Finish styling header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
   <script src="app.js" defer></script>
 </head>
 <body>
+  <div class="main-container">
+    <div id="header">
+      <h3 class="library-text">Library</h3>
+      <nav>
+        <ul>
+          <li>All Book</li>
+          <li>Fiction</li>
+          <li>Non - Fiction</li>
+          <li>Manga</li>
+        </ul>
+      </nav>
+    </div>
+  </div>
   
 </body>
 </html>
