added style for sorter container and the add book container

--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         </ul>
       </nav>
     </div>
+    <div id="sorter-container">
+      <label for="sorter">Sort by</label>
+      <div>
+        <select id="sort-by-date" name="sort-by-date">
+          <option value="publishing-date">Publishing-date</option>
+          <option value="Insertion-date">Insertion-date</option>
+        </select>
+        <select name="desc-asc-sort" id="desc-asc-sort">
+          <option value="Desacending">Desacending</option>
+          <option value="Ascending">Ascending</option>
+        </select>
+      </div>
+    </div>
+    <div id="add-book-btn">
+      <button type="button">+ Add Book</button>
+    </div>
   </div>
   
 </body>
