--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 
     </div>
   </div>
-  <div class="add-book-modal" style="display: none;">
+  <div class="add-book-modal">
     <div class="add-book-content">
       <div class="upper-content">
         <p>Add New Book</p>
+        <button type="button" class="close-btn">X</button>
       </div>
       <div class="lower-content">
         <form class="add-book-form" id="addBookForm">
