Add ( Book Information window modal)

--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
       </div>
     </div>
   </div>
+  <div class="bookInformationModal">
+    <div class="bookInfoContent">
+      <div class="close-btn-2">
+        <button type="button" id="closeBtn">X</button>
+      </div>
+      <div class="book-info-contents">
+        <p class="book-info title">Rich Dad Poor Dad</p>
+        <img src="assets/images/rich-dad-poor-dad-9.jpg" alt="" class="book-info image">
+        <p class="book-info author">Robert Kiyosaki</p>
+        <div class="book-date-page">
+          <p>April 8, 1997</p>
+          <span>|</span>
+          <p>336 pages</p>
+        </div>
+        <button type="button" id="readStatusBtn">Read</button>
+      </div>
+    </div>
+  </div>
   
 </body>
 </html>
