fix problem info book is not matching its content ( ASAP )

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <button type="button" id="closeBtn">X</button>
       </div>
       <div class="book-info-contents">
-        <p class="book-info title">Rich Dad Poor Dad</p>
-        <img src="assets/images/rich-dad-poor-dad-9.jpg" alt="" class="book-info image">
-        <p class="book-info author">Robert Kiyosaki</p>
+        <p class="book-info title"></p>
+        <img class="book-info image">
+        <p class="book-info author"></p>
         <div class="book-date-page">
-          <p>April 8, 1997</p>
+          <p class="book-info date"></p>
           <span>|</span>
-          <p>336 pages</p>
+          <p class="book-info pages"></p>
         </div>
         <button type="button" id="readStatusBtn">Read</button>
       </div>
