added style for the activate button

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <h3 class="library-text">Library</h3>
       <nav>
         <ul>
-          <li>All Book</li>
-          <li>Fiction</li>
-          <li>Non - Fiction</li>
-          <li>Manga</li>
+          <li class="genre">All Book</li>
+          <li class="genre">Fiction</li>
+          <li class="genre">Non - Fiction</li>
+          <li class="genre">Manga</li>
         </ul>
       </nav>
     </div>
@@ -89,7 +89,7 @@
           <span>|</span>
           <p class="book-info pages"></p>
         </div>
-        <button type="button" id="readStatusBtn">Read</button>
+        <button type="button" id="readStatusBtn"></button>
       </div>
     </div>
   </div>
