Finished library ( add order by and genre by feature in the future)

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
       </div>
       <div class="lower-content">
         <form class="add-book-form" id="addBookForm">
-          <input type="text" id="book-title" name="book-title" placeholder="Title" data-input maxlength="32">
-          <input type="text" id="book-author" name="book-author" placeholder="Author" data-input maxlength="32">
-          <input type="number" id="book-pages" name="book-pages" placeholder="Pages" data-input min="50" max="2000">
+          <input type="text" id="book-title" name="book-title" placeholder="Title" data-input maxlength="32" required>
+          <input type="text" id="book-author" name="book-author" placeholder="Author" data-input maxlength="32" required>
+          <input type="number" id="book-pages" name="book-pages" placeholder="Pages" data-input min="50" max="2000" required>
           <select name="book-genre" id="book-genre" data-input >
             <option value="Fiction">Fiction</option>
             <option value="Non-fiction">Non-Fiction</option>
             <option value="Manga">Manga</option>
           </select>
           <input type="url" id="book-url-img" name="book-url-img" placeholder="Book Cover ( URL ) - Optional" data-input>
-          <input type="date" id="book-publish-date" name="book-publish-date" data-input>
+          <input type="date" id="book-publish-date" name="book-publish-date" data-input required>
           <div>
             <label for="read-status">Have you read it?</label>
             <input type="checkbox" id="read-status" name="read-status">
